--- a/source/index.html
+++ b/source/index.html
@@ -8,44 +8,49 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page__body text-base">
+<body class="page__body text-base no-js">
 
   <header class="header container">
     <a href="#">
       <img src="./img/logo/logo_mini.svg" alt="logo" width="32" height="32">
     </a>
+
+    <button class="hamburger hamburger--open" type="button" aria-label="открыть меню">
+      <span class="visually-hidden">Меню</span>
+    </button>
+    
     <nav class="header__hidden">
       <ul class="header__list">
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">О нас</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">Тарифы</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#"> Для бизнеса</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">Психологам</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">Сертификаты</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">Материалы</a>
         </li>
 
-        <li>
+        <li class="header__item">
           <a class="text-nav" href="#">FAQ</a>
         </li>
       </ul>
 
-      <button class="text-btn-psih" type="button">Подобрать психолога</button>
+      <button class="header__button button button--psych text-btn-psych" type="button">Подобрать&nbsp;психолога</button>
 
     </nav>
   </header>
@@ -377,5 +382,6 @@
     </div>
   </footer>
 </body>
+<script src="./js/hamburger.js"></script>
 
 </html>
